<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <artifactId>bankid-idp-backend</artifactId>
  <packaging>jar</packaging>
  
  <parent>
    <groupId>se.swedenconnect.bankid</groupId>
    <artifactId>saml-bankid-idp-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <relativePath/>
  </parent>  

  <name>Sweden Connect :: BankID :: SAML Identity Provider :: Backend</name>
  <description>BankID SAML Identity Provider Backend</description>
  <url>https://docs.swedenconnect.se/bankid-saml-idp</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/swedenconnect/bankid-saml-idp.git</connection>
    <developerConnection>scm:git:https://github.com/swedenconnect/bankid-saml-idp.git</developerConnection>
    <url>https://github.com/swedenconnect/bankid-saml-idp/tree/master</url>
  </scm>

  <organization>
    <name>Sweden Connect</name>
    <url>https://www.swedenconnect.se</url>
  </organization>

  <developers>
    <developer>
      <name>Martin Lindström</name>
      <email>martin@idsec.se</email>
      <organization>IDsec Solutions AB</organization>
      <organizationUrl>https://www.idsec.se</organizationUrl>
    </developer>
    
    <developer>
      <name>Felix Hellman</name>
      <email>felix@idsec.se</email>
      <organization>Helagon AB</organization>
      <organizationUrl>https://www.idsec.se</organizationUrl>
    </developer>    
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>17</java.version>
  </properties>
    
  <dependencyManagement>

    <dependencies>
      
    </dependencies>
  </dependencyManagement>  
  
  <dependencies>
    
    <dependency>
      <groupId>se.swedenconnect.bankid</groupId>
      <artifactId>bankid-rp-api</artifactId>
      <version>${project.version}</version>    
    </dependency>
    
    <!-- QR support -->
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>core</artifactId>
      <version>${zxing.version}</version>
      <optional>true</optional>
    </dependency>
    
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>javase</artifactId>
      <version>${zxing.version}</version>
      <optional>true</optional>
    </dependency>    
        
    <dependency>
      <groupId>se.swedenconnect.spring.saml.idp</groupId>
      <artifactId>saml-idp-spring-boot-starter</artifactId>
      <version>1.0.0</version>
    </dependency>    
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>      
    </dependency>    

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

<!--
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
    </dependency>
    -->
    
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>bootstrap</artifactId>
      <version>4.6.2</version>
      <exclusions>
        <exclusion>
          <groupId>org.webjars</groupId>
          <artifactId>jquery</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.webjars</groupId>
          <artifactId>popper.js</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>popper.js</artifactId>
      <version>1.16.1-lts</version>
    </dependency>

    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>jquery</artifactId>
      <version>3.6.1</version>
    </dependency>
    
  </dependencies>

  <build>
    
    <plugins>      

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <delimiters>
            <delimiter>@</delimiter>
          </delimiters>
          <nonFilteredFileExtensions>
            <nonFilteredFileExtension>jks</nonFilteredFileExtension>
            <nonFilteredFileExtension>p12</nonFilteredFileExtension>
          </nonFilteredFileExtensions>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring.boot.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
              <goal>build-info</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <from>
            <image>openjdk:18.0.2.1-slim</image>
          </from>
          <to>
            <image>${DOCKER_REPO}/bankid-saml-idp</image>
          </to>
          <container>
            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
            <jvmFlags>
              <jvmFlag>-Dtomcat.ajp.enabled=true</jvmFlag>
              <jvmFlag>-Djava.net.preferIPv4Stack=true</jvmFlag>
              <jvmFlag>-Dorg.apache.xml.security.ignoreLineBreaks=true</jvmFlag>
            </jvmFlags>
            <ports>
              <port>8009</port>
              <port>8443</port>
            </ports>
          </container>
        </configuration>
      </plugin>

    </plugins>

  </build>

</project>
